--- a/session1/Jenkinsfile
+++ b/session1/Jenkinsfile
@@ -44,15 +44,15 @@ pipeline {
         }
     }
 
-//     post { 
-//         always { 
-//             echo 'I will always run whether job is success or not'
-//         }
-//         success{
-//             echo 'I will run only when job is success'
-//         }
-//         failure{
-//             echo 'I will run when failure'
-//         }
-//     }
-// }
+    post { 
+        always { 
+            echo 'I will always run whether job is success or not'
+        }
+        success{
+            echo 'I will run only when job is success'
+        }
+        failure{
+            echo 'I will run when failure'
+        }
+    }
+}
