--- a/session1/Jenkinsfile
+++ b/session1/Jenkinsfile
@@ -42,6 +42,17 @@ pipeline {
                 '''
             }
         }
+        stage('destroy') {
+            steps{
+                
+                sh '''
+                    cd session1
+                    ls -ltr
+                    pwd
+                    terraform destroy -auto-approve
+                '''
+            }
+        }
     }
 
     post { 
